--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "next": "12.1.6",
+    "next-auth": "^4.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
+    "@types/react": "^18.0.14",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "typescript": "^4.7.4"
   }
 }
