--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-google": "^0.14.0",
     "next": "12.1.6",
     "next-auth": "^4.6.1",
     "react": "18.2.0",
