--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-google": "^0.14.0",
     "next": "12.1.6",
@@ -21,6 +22,7 @@
     "@types/react": "^18.0.14",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "prisma": "^4.3.1",
     "typescript": "^4.7.4"
   }
 }
