--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true, 
     },
-    "eslint.validate": ["javascript"],
+    "eslint.validate": ["javascript", "typescript"],
     "editor.detectIndentation": true,
     "files.eol": "\n"
 }
