--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,13 @@ services:
     image: postgres:latest
     restart: always
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=ppp
+      - POSTGRES_PASSWORD=ppp
+      - POSTGRES_DATABASE=ppp
     volumes:
       - postgres:/var/lib/postgresql/data
     ports:
       - "5432:5432"
 volumes:
   postgres:
+      name: "ppp-postgres"
