--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
+    "cookie": "^0.5.0",
+    "cookies": "^0.8.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-google": "^0.14.0",
+    "jose": "^4.9.3",
     "next": "12.1.6",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
