--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-google": "^0.14.0",
     "jose": "^4.9.3",
+    "limax": "^3.0.0",
     "next": "12.1.6",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
