--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,26 +15,35 @@ services:
         target: /app/certs
         read_only: true
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     ports:
       - '80:80'
       - '443:443'
   db:
     image: postgres:latest
     restart: always    
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     networks:
       - ppp-net
-    expose:
-      - '5432'
+    ports:
+      - '5432:5432'
     environment:
       - POSTGRES_USER=ppp
-      - POSTGRES_PASSWORD=ppp
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DATABASE=ppp
     volumes:
       - postgres:/var/lib/postgresql/data  
 
 networks:
   ppp-net:
+    driver: bridge
+    driver_opts:
+      com.docker.network.bridge.enable_icc: "true"
 
 volumes:
   postgres:
