--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node ./server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-slick": "^0.29.0",
+    "sharp": "^0.31.0",
     "slick-carousel": "^1.8.1",
     "vk-io": "^4.7.0"
   },
